--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
 
     //Object Detection
     implementation 'com.google.mlkit:object-detection-custom:17.0.0'
+
+    //Text Recognition
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:17.0.0'
 }
