Text detection correct, even vertically

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,5 @@ dependencies {
     implementation 'com.google.mlkit:object-detection-custom:17.0.0'
 
     //Text Recognition
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:17.0.0'
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta4'
 }
